--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,8 @@
         "titleBar.inactiveBackground": "#b48ead99",
         "titleBar.inactiveForeground": "#15202b99"
     },
-    "peacock.color": "#B48EAD"
+    "peacock.color": "#B48EAD",
+    "cSpell.words": [
+        "openai"
+    ]
 }
