--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,6 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 hyper = { version = "1.2.0", features = ["full"] }
 tokio = { version = "1.36.0", features = ["full"] }
-reqwest = { version = "0.11.24", features = ["json"] }
+reqwest = { version = "0.11.24", features = ["stream"] }
+reqwest-eventsource = "0.5.0"
+futures = "0.3.30"
