--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ tokio = { version = "1.36.0", features = ["full"] }
 reqwest = { version = "0.11.24", features = ["stream"] }
 reqwest-eventsource = "0.5.0"
 futures = "0.3.30"
+rand = "0.8.5"
