--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ reqwest = { version = "0.11.24", features = ["stream"] }
 reqwest-eventsource = "0.5.0"
 futures = "0.3.30"
 rand = "0.8.5"
+axum = { version = "0.7.4", features = ["ws"] }
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
+axum-extra = { version = "0.9.2", features = ["typed-header"] }
