--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+tracing = "0.1.40"
+tracing-subscriber = "0.3.18"
 clap = { version = "4.4.16", features = ["derive"] }
 clap_complete = "4.4.6"
 serde = { version = "1.0", features = ["derive", "rc"] }
@@ -14,9 +16,9 @@ hyper = { version = "1.2.0", features = ["full"] }
 tokio = { version = "1.36.0", features = ["full"] }
 reqwest = { version = "0.11.24", features = ["stream"] }
 reqwest-eventsource = "0.5.0"
-futures = "0.3.30"
 rand = "0.8.5"
+base64 = { version = "0.22.0" }
+
+futures = "0.3.30"
 axum = { version = "0.7.4", features = ["ws"] }
-tracing = "0.1.40"
-tracing-subscriber = "0.3.18"
 axum-extra = { version = "0.9.2", features = ["typed-header"] }
