--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,7 @@ clap_complete = "4"
 serde = { version = "1", features = ["derive", "rc"] }
 serde_json = "1"
 tokio = { version = "1", features = ["full"] }
-reqwest = { version = "0", features = ["stream"] }
-reqwest-eventsource = "0"
-futures = "0"
+reqwest = "0"
 rand = "0"
 base64 = "0"
 uuid = { version = "1", features = ["v4"] }
