--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,17 +6,16 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tracing = "0"
-tracing-subscriber = "0"
 clap = { version = "4", features = ["derive"] }
 clap_complete = "4"
 serde = { version = "1", features = ["derive", "rc"] }
 serde_json = "1"
+log = "0"
 tokio = { version = "1", features = ["full"] }
 reqwest = "0"
+bytes = "1"
 rand = "0"
 base64 = "0"
 uuid = { version = "1", features = ["v4"] }
-bytes = "1"
 regex = "1"
 glob = "0"
