--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,17 +3,17 @@ name = "puppet"
 version = "0.3.1"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+tracing = "0"
+tracing-subscriber = "0"
 clap = { version = "4", features = ["derive"] }
 clap_complete = "4"
 serde = { version = "1", features = ["derive", "rc"] }
 serde_json = "1"
-log = "0"
 tokio = { version = "1", features = ["full"] }
-reqwest = "0"
+reqwest = { version = "0", features = ["stream"] }
 bytes = "1"
+futures = "0"
 rand = "0"
 base64 = "0"
 uuid = { version = "1", features = ["v4"] }
