--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ base64 = "0"
 uuid = { version = "1", features = ["v4"] }
 regex = "1"
 glob = "0"
+tokio-util = { version = "0", features = ["rt"] }
