--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,29 +1,5 @@
-# [package]
-# name = "puppet"
-# version = "0.3.3"
-# edition = "2021"
-
-# [dependencies]
-# anyhow = "1"
-# log = "0"
-# env_logger = "0"
-# clap = { version = "4", features = ["derive"] }
-# clap_complete = "4"
-# serde = { version = "1", features = ["derive", "rc"] }
-# serde_json = "1"
-# tokio = { version = "1", features = ["full"] }
-# reqwest = { version = "0", features = ["stream"] }
-# bytes = "1"
-# futures = "0"
-# rand = "0"
-# base64 = "0"
-# uuid = { version = "1", features = ["v4"] }
-# regex = "1"
-# glob = "0"
-# tokio-util = { version = "0", features = ["rt"] }
-
 [workspace]
-resolver = "2"
+resolver = "3"
 members = [ "app/*", "lib/*" ]
 
 [workspace.dependencies]
@@ -32,13 +8,18 @@ openai = { path = "lib/openai" }
 
 tracing = "*"
 tracing-subscriber = "*"
-anyhow = "1"
+anyhow = "*"
+
+clap = { version = "*", features = ["derive"] }
+clap_complete = "*"
+
 serde = { version = "*", features = ["derive", "rc"] }
 serde_json = "*"
 tokio = { version = "*", features = ["full"] }
 tokio-util = { version = "*", features = ["rt"] }
 axum = { version = "*", features = ["macros"] }
 reqwest = { version = "*", features = ["stream"] }
+
 futures = "*"
 bytes = "*"
 
