--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,5 +24,5 @@ futures = "*"
 bytes = "*"
 
 uuid = { version = "*", features = ["v7"] }
-chrono = "*"
+chrono = { version = "*", features = ["serde"] }
 base64 = "*"
