--- a/lib/openai/Cargo.toml
+++ b/lib/openai/Cargo.toml
@@ -14,5 +14,6 @@ reqwest.workspace = true
 futures.workspace = true
 bytes.workspace = true
 tokio.workspace = true
+tokio-stream.workspace = true
 
 base64.workspace = true
