--- a/app/api/Cargo.toml
+++ b/app/api/Cargo.toml
@@ -14,10 +14,10 @@ clap.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
+tokio-stream.workspace = true
 futures.workspace = true
 
 axum.workspace = true
 chrono.workspace = true
 
 duckdb = { version = "*", features = ["bundled", "chrono"] }
-tokio-stream = { version = "*" }
