--- a/lib/agent/Cargo.toml
+++ b/lib/agent/Cargo.toml
@@ -11,3 +11,5 @@ tracing.workspace = true
 anyhow.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+base64.workspace = true
+futures.workspace = true
