--- a/app/proxy/Cargo.toml
+++ b/app/proxy/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "api"
+name = "proxy"
 version = "0.1.0"
 edition = "2024"
 
@@ -18,6 +18,3 @@ tokio-stream.workspace = true
 futures.workspace = true
 
 axum.workspace = true
-chrono.workspace = true
-
-duckdb = { version = "*", features = ["bundled", "chrono"] }
