--- a/archive/proxy/Cargo.toml
+++ b/archive/proxy/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "api"
+name = "proxy"
 version = "0.1.0"
 edition = "2024"
 
@@ -7,7 +7,6 @@ edition = "2024"
 framework.workspace = true
 openai.workspace = true
 
-anyhow.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 clap.workspace = true
@@ -16,8 +15,3 @@ serde_json.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
 futures.workspace = true
-
-axum.workspace = true
-chrono.workspace = true
-
-duckdb = { version = "*", features = ["bundled", "chrono"] }
