--- a/app/cli/Cargo.toml
+++ b/app/cli/Cargo.toml
@@ -5,16 +5,15 @@ edition = "2024"
 
 [dependencies]
 framework.workspace = true
-openai.workspace = true
 agent.workspace = true
 
 tracing.workspace = true
-tracing-subscriber.workspace = true
 clap.workspace = true
 clap_complete.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 tokio.workspace = true
+tokio-stream.workspace = true
 futures.workspace = true
 
 rand = "*"
