--- a/lib/agent/Cargo.toml
+++ b/lib/agent/Cargo.toml
@@ -5,10 +5,12 @@ edition = "2024"
 
 [dependencies]
 framework.workspace = true
-openai.workspace = true
 
 tracing.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-base64.workspace = true
 futures.workspace = true
+tokio.workspace = true
+tokio-stream.workspace = true
+
+base64.workspace = true
